syntax = "proto3";
package tws.proto.task;

option java_package = "edu.iu.dsc.tws.proto.checkpoint";
option java_outer_classname = "Checkpoint";

//TaskDiscovery message is sent from the source and sink task to checkpoint manager
//when worker initiates.
message TaskDiscovery {
    int32 taskID = 1;
    TaskType taskType = 2;
    int32 parrallelism = 3;

    enum TaskType {
        SOURCE = 0;
        SINK = 1;
    }
}

enum Family {
    WORKER = 0;
    SOURCE_TASK = 1;
    SINK_TASK = 2;
}

message ComponentDiscovery {
    Family family = 1;
    int32 index = 2;
}

message ComponentDiscoveryResponse {
    Family family = 1;
    int32 index = 2;
    int64 version = 3;
}

message VersionUpdateRequest {
    Family family = 1;
    int32 index = 2;
    int64 version = 3;
}

message VersionUpdateResponse {
    Family family = 1;
    int32 index = 2;
}

message BarrierSync {
    int32 currentBarrierID = 1;
    int32 taskID = 2;
}

message BarrierSend {
    bool sendBarrier = 1;
    int32 currentBarrierID = 2;
}

message CheckpointComplete {
    bool checkpointComplete = 1;
    int32 currentBarrierID = 2;
    int32 sinkID = 3;
}

message CheckpointBarrier {
    int32 currentBarrierID = 1;
}